# arcana-skills

./: .gitignore  CLAUDE.md  README.md  install.bat  install.ps1  install.sh  uninstall.sh
android-developer-skill/: .SKILL.md.swo  .SKILL.md.swp  README.md  SKILL.md  examples.md  patterns.md  reference.md
angular-developer-skill/: README.md  SKILL.md
app-requirements-skill/: SKILL.md  fix-sdd-headings.js  md-to-docx.js  package-lock.json  package.json  remove-heading-numbers.js  remove-heading-numbers.ps1  remove-heading-numbers.sh
app-uiux-designer.skill/: PATHS.md  SKILL-cor.md  SKILL.bak  SKILL.md  package-lock.json  package.json
arcana-ai-agent-flow-skill/: README.md  SKILL.md
arcana-ai-agent-flow-skill/templates/workflow-task-worker/: Cargo.toml  Dockerfile  demo-seed.sh  main.rs  worker.py
arcana-android-developer-skill/: README.md  SKILL.md
arcana-angular-developer-skill/: README.md  SKILL.md  examples.md  patterns.md  reference.md
arcana-devops-skill/: CLAUDE.md  README.md  SKILL.md
arcana-esp32-developer-skill/: README.md  SKILL.md
arcana-go-developer-skill/: README.md  SKILL.md  reference.md
arcana-harmonyos-developer-skill/: README.md  SKILL.md  patterns.md
arcana-ios-developer-skill/: README.md  SKILL.md  examples.md  reference.md
arcana-journey-test-skill/: SKILL.md
arcana-nodejs-developer-skill/: README.md  SKILL.md  patterns.md
arcana-pm-skill/: SKILL.md
arcana-python-developer-skill/: README.md  SKILL.md  examples.md
arcana-react-developer-skill/: README.md  SKILL.md  patterns.md
arcana-rust-developer-skill/: README.md  SKILL.md  reference.md
arcana-springboot-developer-skill/: README.md  SKILL.md  patterns.md
arcana-stm32-developer-skill/: README.md  SKILL.md
arcana-vue-developer-skill/: README.md  SKILL.md
arcana-windows-developer-skill/: README.md  SKILL.md
arch-qube-skill/: README.md  SKILL.md  examples.md  patterns.md  reference.md
claude-agents-workflow-skill/: README.md  SKILL.md
claude-antigravity-sync/: SKILL.md  install.sh
claude-session-archive-skill/: README.md  SKILL.md
claude-session-archive-skill/scripts/crs/: Cargo.toml
claude-session-archive-skill/scripts/crs/eval/: osearch_gate.py  queryset.json
claude-session-archive-skill/scripts/crs/src/: main.rs
claude-trajectory-sync/: SKILL.md
config/: CLAUDE.template.md  settings.template.json  settings.template.windows.json  statusline-command.ps1  statusline-command.sh
daily-ci-agent-skill/: README.md  SKILL.md
devops-skill/: CLAUDE.md  README.md  SKILL.md
doc-indexer-skill/: README.md  SKILL.md  instructions.md
esp32-developer-skill/: README.md  SKILL.md  examples.md  patterns.md  reference.md
go-developer-skill/: README.md  SKILL.md  examples.md  patterns.md
harmonyos-developer-skill/: README.md  SKILL.md  examples.md  reference.md
ios-developer-skill/: README.md  SKILL.md  patterns.md
knowledge-graph-skill/: README.md  SKILL.md
luminous-skill/: README.md  SKILL.md
medical-software-requirements-skill/: SKILL.md  fix-sdd-headings.js  md-to-docx-with-mermaid.js  md-to-docx.js  package-lock.json  remove-heading-numbers.js  (+1 more)
(+625 files in other folders)
