[package]
name = "workflow-task-worker"
version = "1.1.0"
edition = "2021"
description = "Arcana workflow task-worker — drives role-based BPMN flows (Rust port of worker.py, with task-level concurrency)"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio-postgres = "0.7"  # data-index reconciler writes repairs straight to its PG

[profile.release]
strip = true
