[package]
name = "crs"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
